--- a/css/main.css
+++ b/css/main.css
@@ -1035,7 +1035,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: var(--background-color, white);
     display: flex;
     align-items: center;
     justify-content: center;
